doc/config-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config
spec:
  replicas: 2
  selector:
    matchLabels:
      app: config
  template:
    metadata:
      labels:
        app: config
    spec:
      containers:
      - name: config
        image: ningxue/config
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: config
spec:
  selector:
    app: config
  ports:
  - name: http
    port: 8080
    targetPort: 8080
