doc/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-svc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-svc
  template:
    metadata:
      labels:
        app: order-svc
    spec:
      containers:
      - name: order-svc
        image: ningxue/order-svc
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  selector:
    app: order-svc
  ports:
  - name: http
    port: 8080
    targetPort: 8080
