doc/ingress-order.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-order
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /order/pay
        backend:
          serviceName: order-svc
          servicePort: 8080
